22/07/2008
----------
All syscalls of minifire displays correctly in disasm. Added helper function in disasm + a lot new disopcodes (shadow).
More decodes on disasembler. Basic syscall disasm implementation. (shadow)

21/07/2008
----------
More work in disasembler . Loading machine code now. minifire code seems okay (shadow)
Memory class is using singleton pattern (shadow)
Prelimary work for disasembler. Not much done and it will take a while :P (shadow)

20/07/2008
----------
-created prototype memory class. So far only read32 from ram which is the most important now in order
 to get disasembler to be implemented and memory viewer (shadow)
-minifire seems to load okay to prototype RAM. ELf loader probably need a little more work
 to work okay with other elfs but i quess it is not something hard (shadow)

18/07/2008
----------
More to Elf Header . Next step will be loading it to PSP Memory (shadow)

17/07/2008
----------
Startup support for PBP loading (shadow)
Fixed the FileLoading problem (shadow)
Fixed The Utility class. Strings display as the should now. (shadow)
Few adds to ElfHeader (nothing important ) (shadow)
Added Utility class for display the Hexs properly. Not fully working (shadow)
Added ElfHeaderInfo for displaying elf header(shadow)

16/07/2008
----------

Add a basic gui with fileloader. (shadow)
Elfheader seems to load okay . Time now for Section Header. (shadow)

15/07/2008
----------
First try of elf loader creation. Not working yet! (shadow)